B-F Sandbox Full-Backup/src/objects/Release__c.object
<CustomObject>
    <description>A Release represents a segment or phase of a project. Releases can happen consecutively, overlap, or happen concurrently. A Releases represents the highest level object which serves as an umbrella to the other objects.</description>
    <fields>
        <fullName>Change_Ticket__c</fullName>
        <label>Change Ticket</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Externally_Announced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Externally Announced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scoping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot Fix</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Release</label>
    <listViews>
        <fullName>AllReleases</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Releases</label>
    </listViews>
    <listViews>
        <fullName>Upcoming_Releases</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Released</value>
        </filters>
        <label>Upcoming Releases</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I30000002CTz4EAG_00N300000092g7XEAQ</fullName>
        <active>true</active>
        <errorMessage>You can only pick a future release.</errorMessage>
        <field>Change_Set__c.Releases__c</field>
        <filterItems>
            <field>Release__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Released</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Change Request_Release</name>
    </namedFilters>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>